--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"></meta>
         <script src="index.js"></script>
         <link rel="stylesheet" href="style.css"></script>
+        <link rel="icon" href="favicon.svg"></script>
     </head>
     <body style="margin: 0;">
         <main style="display: flex; flex-direction: column;">
